duck/test/fail/duplicate_pattern.duck
main = exit 0

_ = case 1,2 of x,x -> 0
